Update 'go-zjfltofq' component image to: quay.io/rhtap_qe/go-zjfltofq:3f3616b88276a5e28f86d745410b3119f322f1e0@sha256:0149e35e6f7ee1b71d7c10e94bc375d0805b3fd82f0a12ead7fac1b0c330954e

--- a/components/go-zjfltofq/overlays/development/deployment-patch.yaml
+++ b/components/go-zjfltofq/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-zjfltofq
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-zjfltofq:3f3616b88276a5e28f86d745410b3119f322f1e0@sha256:0149e35e6f7ee1b71d7c10e94bc375d0805b3fd82f0a12ead7fac1b0c330954e
+          name: container-image
